<?xml version="1.0"?>
<package format="3">
  <name>iv_tools</name>
  <version>0.0.0</version>
  <description>Coin3D port of OpenInventor iv_tools</description>

  <maintainer email="mallanmba@gmail.com">mallan</maintainer>

  <license>LGPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>

